--- a/data_engineering_0/.github/workflows/ci.yml
+++ b/data_engineering_0/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Pipeline
 
 on:
   push:
@@ -7,8 +7,23 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build-test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: weather
+          POSTGRES_USER: weather
+          POSTGRES_PASSWORD: weather
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U weather" --health-interval 10s --health-timeout 5s --health-retries 5
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v4
       - name: Set up Node.js
@@ -18,6 +33,10 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: npm run lint || true
-      - name: Test
-        run: npm test || true
+        run: npm run lint
+      - name: Type Check
+        run: npm run type-check
+      - name: Run Tests
+        run: npm test
+      - name: Build
+        run: npm run build
