--- a/data_engineering_0/package.json
+++ b/data_engineering_0/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --write \"**/*.{ts,js,json,css,html}\"",
     "type-check": "tsc --noEmit",
     "check-all": "npm run type-check && npm run lint && npm run format",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "mocha tests/integration/*.js"
   },
   "lint-staged": {
     "*.{ts,js}": [
@@ -39,6 +40,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
+    "mocha": "^10.0.0",
     "prettier": "^3.6.2",
     "typescript": "^5.0.0",
     "wrangler": "^4.34.0"
@@ -52,5 +54,8 @@
     "workers"
   ],
   "author": "Your Name",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
