--- a/data_science_0/.github/workflows/ci.yml
+++ b/data_science_0/.github/workflows/ci.yml
@@ -1,14 +1,29 @@
-name: CI
+name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  build-and-test:
+  build-test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: living
+          POSTGRES_USER: living
+          POSTGRES_PASSWORD: living
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U living" --health-interval 10s --health-timeout 5s --health-retries 5
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v4
       - name: Set up Node.js
@@ -19,5 +34,7 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint || true
-      - name: Test
-        run: npm test || true
+      - name: Run Tests
+        run: npm test
+      - name: Build
+        run: npm run build || true
