Update Dockerfile and requirements; add health check endpoint with FastAPI

--- a/data_engineering_1/Dockerfile
+++ b/data_engineering_1/Dockerfile
@@ -8,12 +8,12 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
-COPY pyproject.toml setup.py ./
+COPY pyproject.toml ./
+COPY requirements.txt ./
 COPY src/ ./src/
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -e ".[dev]"
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project files
 COPY dbt_project/ ./dbt_project/
@@ -24,4 +24,4 @@ RUN mkdir -p data/raw data/processed
 
 EXPOSE 3000
 
-CMD ["dagster", "dev", "-h", "0.0.0.0", "-p", "3000"]
+CMD ["sh", "-c", "dagster dev -h 0.0.0.0 -p 3001 & python src/web_health.py"]
