--- a/data_engineering_1/pyproject.toml
+++ b/data_engineering_1/pyproject.toml
@@ -2,7 +2,7 @@
 name = "nyc-taxi-analytics-pipeline"
 version = "1.0.0"
 description = "Production-grade data engineering pipeline for NYC Taxi data."
-authors = ["Your Name <your.email@example.com>"]
+authors = [{name = "Your Name", email = "your.email@example.com"}]
 license = "MIT"
 readme = "README.md"
 
