--- a/data_engineering_1/pyproject.toml
+++ b/data_engineering_1/pyproject.toml
@@ -27,3 +27,6 @@ dev = [
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.dagster]
+module_name = "src.orchestration.assets"
