Add Dockerfiles and health check endpoints; implement integration and unit tests for the Flask dashboard app

--- a/data_science_0/package.json
+++ b/data_science_0/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "poland-living-dashboard",
   "version": "1.0.0",
   "description": "A comprehensive data science portfolio project comparing Poland's living standards with the rest of Europe",
