Add tests for health and prediction endpoints, and create a progress review and project spec sheets
- Implemented unit tests for health and prediction endpoints in `test_endpoints.py`.
- Added a portfolio progress review document outlining skills and gaps for senior developer level.
- Created a spec sheet for a cloud-native streaming data platform and an end-to-end ML platform for urban quality of life forecasting.
- Included detailed objectives, tech stacks, core features, and deliverables for both projects.

--- a/data_engineering_1/pyproject.toml
+++ b/data_engineering_1/pyproject.toml
@@ -30,3 +30,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.dagster]
 module_name = "src.orchestration.assets"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
