--- a/data_engineering_4/pyproject.toml
+++ b/data_engineering_4/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "data_science_2"
+name = "data_engineering_4"
 version = "0.1.0"
-description = "Predictive Analytics Platform for Urban Quality of Life"
+description = "Cloud-Native Streaming Data Platform for Smart Cities"
 authors = [
     { name = "Your Name", email = "your.email@example.com" }
 ]
@@ -10,14 +10,13 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi",
     "uvicorn",
+    "kafka-python",
     "pandas",
-    "numpy",
-    "scikit-learn",
-    "xgboost",
-    "mlflow",
+    "psycopg2-binary",
+    "redis",
+    "boto3",
     "pytest",
-    "pytest-cov",
-    "plotly"
+    "pytest-cov"
 ]
 
 [tool.pytest.ini_options]
