--- a/data_science_2/Dockerfile
+++ b/data_science_2/Dockerfile
@@ -5,5 +5,6 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 COPY src/ ./src/
 COPY notebooks/ ./notebooks/
+COPY dashboard/ ./dashboard/
 EXPOSE 8000
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
