--- a/data_engineering_2/Dockerfile
+++ b/data_engineering_2/Dockerfile
@@ -1,9 +1,23 @@
-# SOTA Dockerfile for data_engineering_2
 FROM python:3.11-slim
+
 WORKDIR /app
-COPY requirements.txt ./
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY src/ ./src/
-COPY dbt_project/ ./dbt_project/
-EXPOSE 8000
+
+# Copy application code
+COPY . .
+
+# Create non-root user
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+USER appuser
+
+# Default command (can be overridden in docker-compose)
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
