--- a/data_science_4/requirements.txt
+++ b/data_science_4/requirements.txt
@@ -1,10 +1,9 @@
+mlflow==2.9.2
+scikit-learn==1.3.2
 fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
-scikit-learn==1.3.2
 pandas==2.1.3
 numpy==1.26.2
-joblib==1.3.2
 pytest==7.4.3
-pytest-cov==4.1.0
 httpx==0.25.2
